--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Translater</title>
+    <title>Banana Translator</title>
 </head>
 
 <body>
+    <h1>This is a Banana Language Translator</h1>
 
+    <script src="app.js" type="text/javascript"> </script>
 </body>
 
 </html>
