--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>This is a Banana Language Translator</h1>
+    <button id="btn-translate">Translate</button>
 
     <script src="app.js" type="text/javascript"> </script>
 </body>
