--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Translator</title>
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <h1>This is a Banana Language Translator</h1>
+    <textarea id="txt-input" placeholder="Input you text here 👇" class="txt-area"></textarea>
     <button id="btn-translate">Translate</button>
 
     <script src="app.js" type="text/javascript"> </script>
