input output processing done

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <h1>This is a Banana Language Translator</h1>
-    <textarea id="txt-input" placeholder="Input you text here 👇" class="txt-area"></textarea>
+    <h1 class="read-txt txt-size1">🍌This is a <span class="txt-yellow">Banana</span> Language Translator🍌</h1>
+    <textarea id="txt-input" placeholder="Input you text here 👈" class="txt-area"></textarea>
     <button id="btn-translate">Translate</button>
+
+    <div class="read-txt txt-size2">Translation 👇</div>
+    <div id="output"></div>
 
     <script src="app.js" type="text/javascript"> </script>
 </body>
