--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="btn-translate">Translate</button>
 
     <div class="read-txt txt-size2">Translation 👇</div>
-    <div id="output"></div>
+    <div id="txt-output"></div>
 
     <script src="app.js" type="text/javascript"> </script>
 </body>
