--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <h1 class="read-txt txt-size1">🍌This is a <span class="txt-yellow">Banana</span> Language Translator🍌</h1>
-    <textarea id="txt-input" placeholder="Input you text here 👈" class="txt-area"></textarea>
-    <button id="btn-translate">Translate</button>
+    <textarea style="background-color:#fef08a;" id="txt-input" placeholder="Input you text here 👈" class="txt-area"></textarea>
+    <button id="btn-translate" class="btn-style">Translate</button>
 
     <div class="read-txt txt-size2">Translation 👇</div>
-    <div id="txt-output"></div>
+    <div id="txt-output" style="background-color:#fef08a;"></div>
 
     <script src="app.js" type="text/javascript"> </script>
 </body>
