--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div class="read-txt txt-size2">Translation 👇</div>
     <div id="txt-output" style="background-color:#fef08a;"></div>
 
+    <footer class="footer">
+        <div class="footer-tag">Made with ❤️ by Rakshit</div>
+    </footer>
+
     <script src="app.js" type="text/javascript"> </script>
 </body>
 
