--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 class="read-txt txt-size1">🍌This is a <span class="txt-yellow">Banana</span> Language Translator🍌</h1>
-    <textarea style="background-color:#fef08a;" id="txt-input" placeholder="Input you text here 👈" class="txt-area"></textarea>
+    <textarea style="background-color:#fef08a;" id="txt-input" placeholder="Input your text here 👈" class="txt-area"></textarea>
     <button id="btn-translate" class="btn-style">Translate</button>
 
     <div class="read-txt txt-size2">Translation 👇</div>
